# EventTrader

./: .gitignore  .mcp.json  CLAUDE.md  Dockerfile.enricher  Dockerfile.event  Dockerfile.neo4j  Dockerfile.xbrl  INGESTION_EVENTS_COMPLETE.md  README.md  Report.ipynb  STOCK_RETURNS_CALCULATION_FLOW.md  agent  architecture_test_results.json  clean_all_logs.sh  conftest.py  dump.rdb  edge_writer_analysis.md  event_trader.pid  fiscal-math-explainer-v2.html  fiscal-math-explainer.html  fix_jupyter_kernel.sh  git-add-k8s.sh  guidance-extraction-flow.html  guidance-structure-explorer.html  guidance-wip-review.html  k8s-opus-test.py  kubeSetup.md  kubeSetup_KEY_CHANGES.md  kubeSetup_UPDATED.md  learning-loop-explainer.html  multi_compare  neo4j-memory-increase-implementation.md  orchestration-explorer.html  oxm-afterhours-2026-03-26.csv  package-lock.json  pending-set-orphan-accumulation.md  phase1-diagram.html  pytest.ini  report_enricher.py  requirements.txt  (+5 more)
.claude/: mcp_servers.json  settings.json  settings.local.json.bak.2025-12-25_062832
HowTo/: HowToRebuildAndDeploy.md
IBKR/: ReturnsCalculator.ipynb  aapl_news.csv  ibkr_BZ_News.ipynb
News/: NewsMeta.docx  newsAnalysis.ipynb  news_predictions.csv
Returns/: ReturnsPolygon.ipynb  polygonClass copy.py
SEC_API_Files/: SEC_API_Scripts.ipynb  reportSections.py  secApiClass.py  sec_errors.py  sec_filings.csv  sec_restAPI.ipynb  sec_restAPI.py  sec_restAPIOutput.csv  sec_schemas.py  sec_websocket.ipynb  sec_websocket.py  sec_websocketOuput.txt  (+1 more)
data/lse_massive_replacement/raw/lse-data-main/: CHANGELOG.md  README.md  pyproject.toml
data/lse_massive_replacement/raw/lse-data-main/examples/: async_stream.py  basic_stream.py  callback_style.py  disconnect_example.py  feed_health.py  options_data.py  options_stream.py  save_to_csv.py  test_limits.py  unsubscribe_example.py  vault_history.py
data/lse_massive_replacement/raw/lse-data-main/lse/: __init__.py  cli.py  tui.py  vault.py
docs/: xbrl.md  (+13 more)
(+4526 files in other folders)
