[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lse-data"
version = "0.14.0"
description = "Python client for London Strategic Edge market data: live streaming, deep vault history as Parquet, economics series, options chains and flow"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "London Strategic Edge", email = "support@londonstrategicedge.com" },
]
keywords = ["trading", "market data", "websocket", "stocks", "crypto", "forex", "options", "realtime"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "websockets>=11.0",
]

[project.optional-dependencies]
# DataFrame return path for vault pulls: history()/dataset() hand back pandas
# DataFrames when these are present; without them the Parquet file path returns.
frames = ["pyarrow>=14", "pandas>=1.5"]

[project.scripts]
lse = "lse.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["lse"]

[project.urls]
Homepage = "https://londonstrategicedge.com"
Documentation = "https://github.com/londonstrategicedge/lse-data"
Repository = "https://github.com/londonstrategicedge/lse-data"
Issues = "https://github.com/londonstrategicedge/lse-data/issues"
